Adding updated HTML and saved pictures to Github

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    GitHub is cool!
+    <header>
+        <h1>Otters are so cool!</h1>
+    </header>
+
+    <img src="otters.jpg">
+
+    <p> 
+        <h2>Interesting facts about Otters</h2> 
+
+        <ul>
+            <li> Otter is a common name for a carnivorous mammal in the subfamily Lutrinae.</li>
+            <li>There are 13 species of otter found all around the world. Some of the best known are the Giant otter, the Sea otter, the European otter, the Northern river otter among others.</li>
+            <li>Otters are adorable creatures that live both on land and in the water.</li>
+            <li>They like to swim on their back and sides and can see just as well underwater as they can above.</li>
+        </ul>
+    </p>
+    
 </body>
 </html>
